Bottom white space fix

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -55,7 +55,7 @@ html,body{
   width: 100%;
   height: 100%;
 }
-html,body,div,h1,h2,h3,h4,p{
+*{
   text-decoration: none;
   padding: 0;
   margin: 0;
